--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="style.css">
+
 
 </head>
 
@@ -55,14 +56,16 @@
         </div>
     </nav>
 
-    <div class="container bg-light my-4 mt-5" style="text-align: center";>
+    <div class="container bg-light my-4 mt-5" style="text-align: center" ;>
         <div class="jumbotron">
-            <h1 class="display-4">Current Time is: <h2><span id="time"></span></h2></h1>
-            <p class="lead">Efficient, Elegant Clock App: Time management made easy with sleek design, customizable alarms, and world clock functionality. <br> Your perfect companion.</p>
+            <h1 class="display-4">Current Time is: <h2><span id="time"></span></h2>
+            </h1>
+            <p class="lead">Efficient, Elegant Clock App: Time management made easy with sleek design, customizable
+                alarms, and world clock functionality. <br> Your perfect companion.</p>
             <hr class="my-4">
             <p>Intuitive UI, Multiple Time Zones, Smart Alarms. Always on Time!</p>
             <a class="btn btn-primary btn-lg mb-3" href="#" role="button">Learn more !!!!</a>
-          </div>
+        </div>
     </div>
 
 
@@ -70,8 +73,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+        </script>
 </body>
+
 </html>
